--- a/src/page/Home.module.css
+++ b/src/page/Home.module.css
@@ -140,12 +140,24 @@
 }
 
 .content h1 span {
+    position: relative;
     font-size: 7rem;
     -webkit-text-fill-color: transparent;
-    background: linear-gradient(90deg, #FECDD2, #FA7284);
+    background: linear-gradient(180deg, #FECDD2, #FA7284);
     -webkit-background-clip: text;
     background-clip: text;
 }
+/* 
+.content h1 span::after {
+    content: '';
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    width: 70%;
+    height: 10px;
+    background-color: #FA7284;
+    border-radius: 10px;
+} */
 
 .content p {
     font-size: 1.2rem;
@@ -167,7 +179,7 @@
 
     font-size: 15px;
     box-shadow: 0 0px 100px #FECDD2,
-    0 0px 20px #fecdd28e;
+        0 0px 20px #fecdd28e;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
@@ -178,7 +190,7 @@
 .content button:hover {
     transform: scale(1.03);
     box-shadow: 0 0px 150px #FECDD2,
-    0 0px 20px #fecdd2da;
+        0 0px 20px #fecdd2da;
 }
 
 .ref {
