--- a/src/page/About/About.module.css
+++ b/src/page/About/About.module.css
@@ -2,48 +2,135 @@
     width: 100%;
     height: 100vh;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+    padding: 0 5%;
+    background: radial-gradient(circle at left, rgba(124, 24, 24, 0.397)0%, rgb(0, 0, 0) 20%);
+    /* background: linear-gradient(90deg, #000000 60%, transparent); */
+    /* background-image: url('/background.jpg'); */
+}
+
+.about_dashboard {
+    width: 60%;
+    display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    z-index: 2;
 }
 
-.about_dashboard{
-    height: max-content;
-    position: relative;
-    display: flex;
-    justify-content: start;
-    align-items: center;
+.about_dashboard button{
+    width: 300px;
+    height: 40px;
+    margin-top: 20px;
+    color: #FA7284;
+    border:2px solid #FA7284;
+    border-radius: 15px;
+    font-size: 1.2rem;
+    font-weight: 500;
+    background-color: transparent;
+    cursor: pointer;
+    transition: .3s;
 }
 
-.about_dashboard h1{
-    font-size: 4rem;
+.about_dashboard button:hover {
+    background-color: #bd133b59;
+    color: white;
+    box-shadow: 0 0 40px rgba(189, 19, 59, 0.5);
+    border: 2px solid #BD133B;
+    transition: all 0.3s ease-in-out;
+}
+
+.about_dashboard h1 {
+    width: 100%;
+    font-size: 5rem;
     font-weight: 600;
     color: white;
+    margin-bottom: 2rem;
 }
 
-.about_dashboard h1 span{
+.about_dashboard h1 span {
     position: relative;
+    display: inline-block;
 }
 
-.about_dashboard h1 span::after{
+.about_dashboard h1 span::after {
     content: '';
     position: absolute;
     left: 0;
-    transform: rotate(4deg);
-    width: 50%;
-    height: 90%;
+    bottom: 13px;
+    width: 45%;
+    height: 70%;
     background-color: #BD133B;
     z-index: -1;
+    transform: rotate(-2deg);
+    border-radius: 3px;
 }
 
-.model{
+.paragraph_content {
+    margin-top: 30px;
+    width: 100%;
+    color: #e0e0e0;
+    font-size: 20px;
+    text-align: justify;
+    /* line-height: 1.6; */
+}
+.paragraph_content p{
+    max-width: 750px;
+}
+
+.paragraph_content ul {
+    margin-top: 20px;
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.paragraph_content li {
+    position: relative;
+    padding-left: 25px;
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+.paragraph_content li::before {
+    content: '•';
+    color: #BD133B;
+    font-size: 1.5rem;
     position: absolute;
-    right: -200px;
-    border-radius: 25px;
-    box-shadow: 0 0 30px rgba(255, 255, 255, 0.7),
-    -50px 0 150px #f3405b91;
-    width: 800px;
-    display: flex;
+    left: 0;
+    top: -5px;
+}
+
+.container_image {
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: 50%;
+    overflow: hidden;
+    z-index: 1;
+    mask-image: linear-gradient(to left, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 0));
+}
+
+.model {
+    height: 100%;
+    width: auto;
     object-fit: cover;
-    justify-content: center;
-    align-items: center;
+    object-position: left center;
+    filter: brightness(0.6);
+    animation: autoScrrollImage 50s linear infinite;
+}
+
+@keyframes autoScrrollImage {
+    0% {
+        transform: translateX(0%);
+    }
+    50% {
+        transform: translateX(-40%);
+    }
+    100% {
+        transform: translateX(0%);
+    }
 }
