--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
     font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-    
+
     color: rgb(255, 255, 255);
     background-color: #000000;
 
@@ -10,8 +10,27 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+.footer_overlay {
+    width: 100%;
+    height: 50px;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(15px);
+    background-color: black;
+    border: 1px solid black;
+    box-shadow:
+        0 0px 100px rgba(0, 0, 0),
+        0 0px 20px rgba(0, 0, 0, 0.3),
+        0 -20px 10px rgba(0, 0, 0, 0.3),
+        0 -40px 20px rgba(0, 0, 0, 0.5),
+        0 -20px 10px rgba(0, 0, 0, 0.3);
+    ;
+    /* Uncomment the line below to add a background color */
+    /* background-color: rgba(0, 0, 0, 0.5); */
+    z-index: 1;
 }
