--- a/src/page/Home/Home.module.css
+++ b/src/page/Home/Home.module.css
@@ -211,7 +211,7 @@
     background-color: #FECDD2;
 }
 
-.footer_overlay {
+/* .footer_overlay {
     width: 100%;
     height: 50px;
     background-color: rgba(0, 0, 0, 0.5);
@@ -225,7 +225,5 @@
         0 -40px 20px rgba(0, 0, 0, 0.5),
         0 -20px 10px rgba(0, 0, 0, 0.3);
     ;
-    /* Uncomment the line below to add a background color */
-    /* background-color: rgba(0, 0, 0, 0.5); */
     z-index: 1;
-}
+} */
