--- a/src/components/Dropdown/Dropdown.module.css
+++ b/src/components/Dropdown/Dropdown.module.css
@@ -34,6 +34,8 @@
     position: absolute;
     background-color: #f9f9f9;
     min-width: 300px;
+    max-height: 400px;
+    overflow-y: scroll;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
     list-style-type: none;
