--- a/src/components/PopulationCard/PopulationCard.module.css
+++ b/src/components/PopulationCard/PopulationCard.module.css
@@ -5,7 +5,7 @@
     transition: .3s ease-in-out;
     padding: 20px;
     border-radius: 15px;
-    margin-bottom: 20px;
+    height: 100%;
 }
 
 .content_population p {
