--- a/src/components/TodayData/TodayData.module.css
+++ b/src/components/TodayData/TodayData.module.css
@@ -1,8 +1,8 @@
 .container_today {
     width: 100%;
     padding: 20px 10px;
-    margin-top: 20px;
     border-radius: 15px;
+    height: 100%;
     border: 1px solid var(--dashboard-color);
     background-color: var(--dashboard-color);
     transition: .5s ease-in-out;
