--- a/src/page/Dashboard/Dashboard.module.css
+++ b/src/page/Dashboard/Dashboard.module.css
@@ -1,4 +1,5 @@
 .container {
+    position: relative;
     min-height: 100vh;
     background-image:
         radial-gradient(circle at bottom right, rgba(145, 24, 24, 0.397) 10%, rgba(0, 0, 0, 0) 50%);
@@ -27,6 +28,18 @@
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent
+}
+
+@media screen and (max-width: 600px) {
+    .title h1 {
+        font-size: 2.5rem;
+        font-weight: bold;
+        background: linear-gradient(90deg, #ffffff, #FECDD2);
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent
+    }
+    
 }
 
 .title h2 {
@@ -75,23 +88,31 @@
 }
 
 .container_mid_data {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    /* display: flex; */
     gap: 20px;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     width: 100%;
 }
 
 .left_mid_data{
     flex: 1 1 300px;
     min-width: 280px;
+}
+
+.center_mid_data,
+.left_mid_data,
+.right_mid_data{
     display: flex;
     flex-direction: column;
     gap: 20px;
+
 }
 
 .center_mid_data,
 .right_mid_data {
     flex: 1 1 300px;
-    height: 100%;
+    max-height: 100%;
     min-width: 280px;
 }
