feat: added auto scroll function

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -45,6 +45,7 @@
 
 .desktop_menu li {
     font-size: 1rem;
+    margin: 0 10px;
     font-weight: 200;
     cursor: pointer;
     transition: color 0.3s;
