--- a/src/components/SkeletonDashboard/SkeletonDashboard.module.css
+++ b/src/components/SkeletonDashboard/SkeletonDashboard.module.css
@@ -7,6 +7,8 @@
     left: 0;
 
     z-index: 10;
+
+    transition: .3s ease-in-out;
 }
 
 .overlay {
@@ -17,7 +19,7 @@
     width: 100%;
     background-color: rgb(0, 0, 0);
     box-shadow: 0 30px 30px rgb(0, 0, 0);
-    z-index: 11;
+    z-index: 9990;
 }
 
 .load {
